--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -4,6 +4,7 @@
 
 @import './layout/header.scss';
 @import './layout/footer.scss';
+@import './layout/sidebar.scss';
 
 
 @import './pages/index.scss';
