--- a/layout/sidebar.ejs
+++ b/layout/sidebar.ejs
@@ -5,34 +5,34 @@
     <nav class="nav flex-column ps-4 pt-1">
         <a class="nav-link active d-flex px-2" aria-current="page" href="../pages/index.html">
             <span class="material-symbols-outlined pe-3">insert_chart</span>
-            <p>Dashboard</p>
+            <p class="fw-bold">Dashboard</p>
         </a>
         <a class="nav-link active d-flex px-2" aria-current="page" href="../pages/index.html">
             <span class="material-symbols-outlined pe-3">forum</span>
-            <p>Question</p>
+            <p class="fw-bold">Question</p>
         </a>
         <a class="nav-link active d-flex px-2" aria-current="page" href="#">
             <span class="material-symbols-outlined pe-3">assignment</span>
-            <p>Assignment</p>
+            <p class="fw-bold">Assignment</p>
         </a>
         <a class="nav-link active d-flex px-2" aria-current="page" href="#">
             <span class="material-symbols-outlined pe-3">video_library</span>
-            <p>Course</p>
+            <p class="fw-bold">Course</p>
         </a>
         <a class="nav-link active d-flex px-2" aria-current="page" href="#">
             <span class="material-symbols-outlined pe-3">supervisor_account</span>
-            <p>Admin</p>
+            <p class="fw-bold">Admin</p>
         </a>
         <a class="nav-link active d-flex px-2" aria-current="page" href="#">
             <span class="material-symbols-outlined pe-3">settings</span>
-            <p>Settings</p>
+            <p class="fw-bold">Settings</p>
         </a>
     </nav>
-    <div class="mt-auto">
-        <div><img src="" alt=""></div>
-        <div>
-            <p>Andy Chen</p>
-            <p>andy0401@mail.com</p>
+    <div class="d-flex mt-auto ps-4">
+        <div class=" member-img me-3"><img src="https://github.com/InFannity/HexSchool-Layout2023-Week5/blob/main/assets/images/andychen.jpeg?raw=true" alt="" class="mw-100"></div>
+        <div class="d-flex flex-column">
+            <p class="mb-0">Andy Chen</p>
+            <p class="text-secondary" style="font-size: 14px;">andy0401@mail.com</p>
         </div>
     </div>
 </aside>
